# dreamlab-ai-website

./: .env.example  .gitignore  .mcp.json  404.html  CHANGELOG.md  CLAUDE.md  CLOSEOUT-SECURITY-AUDIT.md  CNAME  CONSOLIDATION_REPORT.md  MAINTAINERS.md  README.md  eslint.config.js  gpt5-forum-review-context.txt  index.html  package-lock.json  package.json  playwright.config.ts  site.webmanifest  sitemap.xml  spa-redirect.js  tailwind.config.ts  task.md  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.toml
.claude/: memory.db
.github/: CODEOWNERS
assets/: CoCreate-BTbPP2ev.js  CoCreate-BnJpwDXp.js  CoCreate-C2fpc_0L.js  CoCreate-DVmqUylU.js  Contact-BTBu_X49.js  Contact-ByZ40mZu.js  Contact-Bz3TVra5.js  Contact-CcBDa7a-.js  Contact-CctK0fu4.js  Contact-CeiV8Mcq.js  Contact-Cry9mOhg.js  Contact-DCK_mA9e.js  Contact-DQrpSE6k.js  Contact-Dn1QxZ4h.js  Contact-DzGBMl72.js  Contact-UxdaWt4R.js  Ecosystem-C1aM8Ey5.js  EmailSignupForm-BvJlEIbe.js  EmailSignupForm-BykxIvYz.js  EmailSignupForm-Crb2FU1U.js  EmailSignupForm-D4RtfpOm.js  EmailSignupForm-ot8XJtWa.js  Header-31C96o2O.js  Header-9ZBnaKJw.js  Header-AzKOGPu2.js  Header-BdpcHlmT.js  Header-BjbRwS1y.js  Header-BuXtFxWd.js  Header-CBDn20Ur.js  Header-D1o4PJWN.js  Header-DU7ovN2S.js  Header-KCv9C8Oy.js  Header-SAVnTrGH.js  Header-gvJh7nic.js  (+827 more)
community-forum-rs/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  style.css
community-forum-rs/.cargo/: config.toml
community-forum-rs/benchmarks/js-vs-wasm/: report.html
community-forum-rs/crates/admin-cli/: AGENT.md  Cargo.toml  README.md
community-forum-rs/crates/admin-cli/src/: auth.rs  client.rs  config.rs  exit.rs  main.rs
community-forum-rs/crates/admin-cli/src/commands/: mod.rs  wot.rs
community-forum-rs/crates/auth-worker/: Cargo.toml  wrangler.toml
community-forum-rs/crates/auth-worker/src/: admin.rs  admins.rs  auth.rs  delegation.rs  http.rs  invites.rs  lib.rs  moderation.rs  schema.rs  username.rs  webauthn.rs  welcome.rs  wot.rs
community-forum-rs/crates/forum-client/: Cargo.toml  Trunk.toml  index.html  style.css  sw.js  tailwind.config.js  tailwind.css
community-forum-rs/crates/forum-client/src/: app.rs  main.rs  relay.rs  utils.rs
community-forum-rs/crates/forum-client/src/admin/: calendar.rs  channel_form.rs  mod.rs  overview.rs  registrations.rs  relay_settings.rs  section_requests.rs  settings.rs  stats.rs  user_table.rs
community-forum-rs/crates/forum-client/src/auth/: http.rs  mod.rs  nip07.rs  nip98.rs  passkey.rs  session.rs  webauthn.rs
community-forum-rs/crates/forum-client/src/components/: access_denied.rs  board_stats.rs  bookmarks_modal.rs  breadcrumb.rs  category_card.rs  channel_card.rs  event_card.rs  export_modal.rs  global_search.rs  image_upload.rs  join_request.rs  media_embed.rs  mention_text.rs  message_bubble.rs  message_input.rs  mini_calendar.rs  mobile_bottom_nav.rs  mod.rs  modal.rs  moderator_team.rs  notification_bell.rs  notification_center.rs  nsec_backup.rs  onboarding_modal.rs  particle_canvas.rs  pinned_messages.rs  profile_modal.rs  quoted_message.rs  reaction_bar.rs  rsvp_buttons.rs  screen_reader.rs  section_request.rs  thread_view.rs  toast.rs  top_posters.rs  typing_indicator.rs  user_display.rs  virtual_list.rs  welcome_modal.rs  zone_hero.rs
community-forum-rs/crates/forum-client/src/components/fx/: webgpu_activity.rs
community-forum-rs/crates/forum-client/src/dm/: encrypted_media.rs  mod.rs
community-forum-rs/crates/forum-client/src/pages/: admin.rs  category.rs  channel.rs  chat.rs  dm_chat.rs  dm_list.rs  events.rs  forums.rs  home.rs  login.rs  marketplace.rs  mod.rs  note_view.rs  pending.rs  profile.rs  section.rs  settings.rs  setup.rs  signup.rs
community-forum-rs/crates/forum-client/src/stores/: channels.rs  indexed_db.rs  mod.rs  mute.rs  notifications.rs  preferences.rs  profile_cache.rs  read_position.rs  zone_access.rs
community-forum-rs/crates/forum-client/src/utils/: mod.rs  pod_client.rs  relay_url.rs  search_client.rs  solid.rs
community-forum-rs/crates/nostr-core/: Cargo.toml
community-forum-rs/crates/nostr-core/benches/: bench_events.rs  bench_nip44.rs
community-forum-rs/crates/nostr-core/src/: event.rs  gift_wrap.rs  keys.rs  lib.rs  moderation_events.rs  nip04.rs  nip19.rs  nip26.rs  nip44.rs  nip90.rs  nip98.rs  signer.rs  types.rs  wasm_bridge.rs
community-forum-rs/crates/nostr-core/tests/: nip19_proptests.rs  nip19_tests.rs  nip26_tests.rs
community-forum-rs/crates/nostr-upstream-canary/src/: lib.rs
community-forum-rs/crates/pod-worker/: Cargo.toml  wrangler.toml
community-forum-rs/crates/pod-worker/contexts/: did-v1.jsonld
community-forum-rs/crates/pod-worker/src/: acl.rs  auth.rs  contexts.rs  did.rs  lib.rs  payments.rs  provision.rs  remote_storage.rs
community-forum-rs/crates/pod-worker/src/storage/: cf_backend.rs
community-forum-rs/crates/pod-worker/tests/: wac_proptests.rs
community-forum-rs/crates/preview-worker/: Cargo.toml  wrangler.toml
community-forum-rs/crates/preview-worker/src/: lib.rs  parse.rs  ssrf.rs
community-forum-rs/crates/relay-worker/: Cargo.toml  wrangler.toml
community-forum-rs/crates/relay-worker/src/: audit.rs  auth.rs  lib.rs  nip11.rs  profiles.rs  relay_do.rs  trust.rs  whitelist.rs
community-forum-rs/crates/relay-worker/src/relay_do/: broadcast.rs  filter.rs  mod.rs  nip_handlers.rs  session.rs  storage.rs
community-forum-rs/crates/relay-worker/tests/: audit_tests.rs  moderation_tests.rs  nip_handlers_tests.rs  whitelist_tests.rs
community-forum-rs/crates/search-worker/: Cargo.toml  wrangler.toml
community-forum-rs/crates/search-worker/src/: auth.rs  lib.rs  store.rs
forum-config/: Cargo.toml  README.md  dreamlab.toml
forum-config/deploy/: auth-worker.wrangler.toml  pod-worker.wrangler.toml  preview-worker.wrangler.toml  relay-worker.wrangler.toml  search-worker.wrangler.toml
forum-config/deploy/migrations/: 001_init.sql
forum-config/src/: branding.rs  deploy_config.rs  lib.rs  phase1.rs  workers.rs
wasm-voronoi/: Cargo.toml
wasm-voronoi/src/: lib.rs
(+1618 files in other folders)
