[workspace]
resolver = "2"
members = [
    "crates/nostr-core",
    "crates/forum-client",
    "crates/auth-worker",
    "crates/pod-worker",
    "crates/preview-worker",
]

[workspace.dependencies]
# Nostr protocol
nostr = "0.44"
nostr-sdk = "0.44"

# UI framework
leptos = "0.7"
leptos_router = "0.7"
leptos_meta = "0.7"

# Cloudflare Workers
worker = "0.7"

# WebAuthn with PRF support
passkey-types = "0.3"

# Cryptography (NCC audited)
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
chacha20poly1305 = "0.10"
hmac = "0.12"
hkdf = "0.12"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
gloo = "0.11"

# Markdown
comrak = { version = "0.38", default-features = false }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Error handling
thiserror = "2"

# Encoding
hex = "0.4"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# Testing
proptest = "1"
criterion = "0.5"
wasm-bindgen-test = "0.3"

# Internal crates
nostr-core = { path = "crates/nostr-core" }
