[package]
name = "dreamlab-forum-config"
version = "3.0.0-rc11"
edition = "2021"
description = "DreamLab AI forum operator overlay for the nostr-bbs kit"
# Statically links the AGPL-3.0-only nostr-rust-forum kit crates below, so this
# overlay is a combined work and inherits AGPL-3.0-only. "Proprietary" here was
# legally incoherent. See LICENSE and README.md §Licence (AGPL §13 network source).
license = "AGPL-3.0-only"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# Kit crates from nostr-rust-forum @ 25ca8a1 (1.0.0-beta.2 line, ADR-098 /connect).
# Carries the forum-flow-cartography fixes (static ADMIN_PUBKEYS admin resolution,
# unified admin source across workers, fail-closed CORS, truthful NIP-11
# write-policy) plus the ADR-098 /connect magic-link onboarding. Keep this rev in
# sync with KIT_REF in .github/workflows/{deploy,workers-deploy,rust-ci}.yml.
nostr-bbs-core = { git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "25ca8a1", package = "nostr-bbs-core" }
nostr-bbs-config = { git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "25ca8a1", package = "nostr-bbs-config" }
nostr-bbs-mesh = { git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "25ca8a1", package = "nostr-bbs-mesh" }
nostr-bbs-rate-limit = { git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "25ca8a1", package = "nostr-bbs-rate-limit" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

# Required by nostr-bbs-rate-limit (Cloudflare Workers runtime).
# Must match the version used by nostr-bbs-rate-limit to avoid type mismatches.
worker = "0.8"
