[package]
name = "dreamlab-forum-config"
version = "3.0.0-rc11"
edition = "2021"
description = "DreamLab AI forum operator overlay for the nostr-bbs kit"
# Statically links the AGPL-3.0-only nostr-rust-forum kit crates below, so this
# overlay is a combined work and inherits AGPL-3.0-only. "Proprietary" here was
# legally incoherent. See LICENSE and README.md §Licence (AGPL §13 network source).
license = "AGPL-3.0-only"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# Kit crates from nostr-rust-forum @ 98bdf7b0d8a2f1a49751b3bf182dd8331bb81aa5 (gap-close/2026-07 HEAD): the forum
# gap-close slice — COM-13/F2 agent disclosure badge + public /api/agents/disclosure endpoint, F8 admin Agents
# roster tab wired to the nine /api/governance/* endpoints, F1 member read-only view, COM-16/COM-17 decision
# integrity + graduated escalation, REC-6 escalation-default projection. Consumed by this deployment as a thin
# overlay (D1/D2, ADR-040). Cutover provenance is recorded in docs/architecture/kit-compatibility-record.md.
# nostr-bbs-core is at 1.0.0-beta.4 at this rev; config/mesh/rate-limit remain 1.0.0-beta.3. Superseded pin history:
# a149da4 (v1.0.0-beta.3, BBS control-plane + live Chat/Code + pod-url clarity);
# overhaul — de-wildcat menu IA (agent control plane -> #1 AGENTS), the BBS write
# path (signer + relay publish + NIP-42 AUTH, governance ActionResponse signing,
# board composer), legibility/signposting/image CSS, and config-aware zone accents
# (issue #34). On top of PR #63-#69 (sentry door game). Also carries: the relay/
# pod/auth/preview AQE security fixes, on-theme
# server-side ASCII image rendering (nostr-bbs-ascii + preview/pod /ascii routes),
# the W3C CID v1.0 did:nostr context migration, adopts solid-pod-rs 0.5.0-alpha.3,
# and the BBS full-screen CRT honing + framed ASCII images + forum-session login.
# Carries the wasm-bindgen 0.2.125 family bump (worker-build 0.8.5 / CF panic-abort
# recovery; unblocks all 5 Worker builds) on top of round-2 QA + zone-banner work.
# Carries the forum-flow-cartography fixes (static ADMIN_PUBKEYS admin resolution,
# unified admin source across workers, fail-closed CORS, truthful NIP-11
# write-policy), the ADR-098 /connect magic-link onboarding, the solid-pod-rs 0.5
# session batch, NIP-07 async signing for topic-create + governance responses,
# the simplified signup (display name + optional admin-only real name only),
# the relay WebSocket teardown fix (no more "closure invoked after being dropped"
# + reconnect storm), publish-time @handle -> ["p", pubkey] resolution so typed
# agent mentions (@junkiejarvis) route, and the NIP-07 session-restore signer fix
# (admin Users tab + authed fetches work after reload). Keep this rev in sync with
# KIT_REF in .github/workflows/{deploy,workers-deploy,rust-ci}.yml.
# Cargo's bare "*" requirement (the default for a versionless git dep) refuses to
# match a prerelease, so the kit's 1.0.0-beta.3 crates must be requested with an
# explicit prerelease version alongside the git rev (cargo: "if you are looking
# for the prerelease package it needs to be specified explicitly"). Keep this
# version in lockstep with the crate version at `rev` when bumping the kit.
nostr-bbs-core = { version = "1.0.0-beta.4", git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "98bdf7b0d8a2f1a49751b3bf182dd8331bb81aa5", package = "nostr-bbs-core" }
nostr-bbs-config = { version = "1.0.0-beta.3", git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "98bdf7b0d8a2f1a49751b3bf182dd8331bb81aa5", package = "nostr-bbs-config" }
nostr-bbs-mesh = { version = "1.0.0-beta.3", git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "98bdf7b0d8a2f1a49751b3bf182dd8331bb81aa5", package = "nostr-bbs-mesh" }
nostr-bbs-rate-limit = { version = "1.0.0-beta.3", git = "https://github.com/DreamLab-AI/nostr-rust-forum.git", rev = "98bdf7b0d8a2f1a49751b3bf182dd8331bb81aa5", package = "nostr-bbs-rate-limit" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

# Required by nostr-bbs-rate-limit (Cloudflare Workers runtime).
# Must match the version used by nostr-bbs-rate-limit to avoid type mismatches.
worker = "0.8"
