[package]
name = "dreamlab-forum-config"
version = "3.0.0-rc11"
edition = "2021"
description = "DreamLab AI forum operator overlay for the nostr-bbs kit"
# Statically links the AGPL-3.0-only nostr-rust-forum kit crates below, so this
# overlay is a combined work and inherits AGPL-3.0-only. "Proprietary" here was
# legally incoherent. See LICENSE and README.md §Licence (AGPL §13 network source).
license = "AGPL-3.0-only"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# Kit crates from nostr-rust-forum @ 641832ab64a82609322c2dcb3e0764a3d812daac (gap-close/2026-07 HEAD): the forum
# gap-close slice — COM-13/F2 agent disclosure badge + public /api/agents/disclosure endpoint, F8 admin Agents
# roster tab wired to the nine /api/governance/* endpoints, F1 member read-only view, COM-16/COM-17 decision
# integrity + graduated escalation, REC-6 escalation-default projection. Consumed by this deployment as a thin
# overlay (D1/D2, ADR-040). Cutover provenance is recorded in docs/architecture/kit-compatibility-record.md.
# All four library crates are pinned at 1.0.0-beta.6 (see the CRATES.IO note below);
# the current client-only KIT_REF bumps do not move these versions. Superseded pin history:
# a149da4 (v1.0.0-beta.3, BBS control-plane + live Chat/Code + pod-url clarity);
# overhaul — de-wildcat menu IA (agent control plane -> #1 AGENTS), the BBS write
# path (signer + relay publish + NIP-42 AUTH, governance ActionResponse signing,
# board composer), legibility/signposting/image CSS, and config-aware zone accents
# (issue #34). On top of PR #63-#69 (sentry door game). Also carries: the relay/
# pod/auth/preview AQE security fixes, on-theme
# server-side ASCII image rendering (nostr-bbs-ascii + preview/pod /ascii routes),
# the W3C CID v1.0 did:nostr context migration, adopts solid-pod-rs 0.5.0-alpha.3,
# and the BBS full-screen CRT honing + framed ASCII images + forum-session login.
# Carries the wasm-bindgen 0.2.125 family bump (worker-build 0.8.5 / CF panic-abort
# recovery; unblocks all 5 Worker builds) on top of round-2 QA + zone-banner work.
# Carries the forum-flow-cartography fixes (static ADMIN_PUBKEYS admin resolution,
# unified admin source across workers, fail-closed CORS, truthful NIP-11
# write-policy), the ADR-098 /connect magic-link onboarding, the solid-pod-rs 0.5
# session batch, NIP-07 async signing for topic-create + governance responses,
# the simplified signup (display name + optional admin-only real name only),
# the relay WebSocket teardown fix (no more "closure invoked after being dropped"
# + reconnect storm), publish-time @handle -> ["p", pubkey] resolution so typed
# agent mentions (@junkiejarvis) route, and the NIP-07 session-restore signer fix
# (admin Users tab + authed fetches work after reload).
#
# CRATES.IO (from 1.0.0-beta.6): the git-SHA pin is retired — these four library
# crates are pulled from crates.io by version. KIT_REF in
# .github/workflows/{deploy,workers-deploy,rust-ci}.yml still pins the SOURCE
# CLONE the client/workers are Trunk/worker-built from; the CI pin-check keeps
# this version in lockstep with CANONICAL_KIT_VERSION in the compatibility record.
nostr-bbs-core = "1.0.0-beta.6"
nostr-bbs-config = "1.0.0-beta.6"
nostr-bbs-mesh = "1.0.0-beta.6"
nostr-bbs-rate-limit = "1.0.0-beta.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

# Required by nostr-bbs-rate-limit (Cloudflare Workers runtime).
# Must match the version used by nostr-bbs-rate-limit to avoid type mismatches.
worker = "0.8"
