[package]
name = "voronoi-hero"
version = "0.1.0"
edition = "2021"
description = "Golden ratio Voronoi tessellation for web hero backgrounds"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Window",
  "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
