[package]
name = "forum-client"
version = "0.1.0"
edition = "2021"
description = "DreamLab community forum Leptos CSR application"

[[bin]]
name = "forum-client"
path = "src/main.rs"

[dependencies]
nostr-core = { workspace = true }
nostr-sdk = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
comrak = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
