[package]
name = "nostr-core"
version = "0.1.0"
edition = "2021"
description = "Shared Nostr protocol primitives for DreamLab forum (client + workers)"

[lib]
crate-type = ["lib"]

[dependencies]
nostr = { workspace = true }
k256 = { workspace = true }
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
wasm-bindgen-test = { workspace = true }
criterion = { workspace = true }
