[package]
name = "nostr-core"
version = "0.1.0"
edition = "2021"
description = "Shared Nostr protocol primitives for DreamLab forum (client + workers)"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
nostr = { workspace = true }
k256 = { workspace = true }
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
proptest = { workspace = true }
wasm-bindgen-test = { workspace = true }
criterion = { workspace = true }

# proptest pulls rand 0.9 → getrandom 0.3 which needs wasm_js for WASM targets
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bench]]
name = "bench_nip44"
harness = false

[[bench]]
name = "bench_keys"
harness = false

[[bench]]
name = "bench_events"
harness = false
